<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project4180Final</string>
    <string name="action_settings">Settings</string>
    <string name="buttonSignIn">Sign In</string>
    <string name="buttonRegister">Register</string>
    <string name="buttonExit">Exit</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="editTextName"></string>
    <string name="textViewEmail">Email</string>
    <string name="editTextEmail"></string>
    <string name="textViewUser">Username</string>
    <string name="editTextUser"></string>
    <string name="textViewPassword">Password</string>
    <string name="editTextPassword"></string>
    <string name="buttonAccept">Accept</string>
    <string name="buttonCancel">Cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="textViewLUser">User Name</string>
    <string name="editTextLUser"></string>
    <string name="textViewLPassword">Password</string>
    <string name="editTextLPassword"></string>
    <string name="buttonLogin">Login</string>
    <string name="buttonLCancel">Cancel</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="buttonOptionAdd">Add Coupon</string>
    <string name="buttonOptionCancel">Cancel</string>
    <string name="textViewName">Name</string>
    <string name="buttonListCoupons">Lists of Coupons</string>
    <string name="title_activity_coupons">CouponsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="textViewCompany">Name of The Company</string>
    <string name="editTextCompany"></string>
    <string name="textViewExpiration">Expirartion Date</string>
    <string name="editTextExpiration"></string>
    <string name="buttonPhoto">Take Picture</string>
    <string name="buttonCSave">Save</string>
    <string name="buttonCCancel">Cancel</string>
    <string name="textViewOUsername"></string>

</resources>