<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:ems="10"
        android:hint="@string/editTextName"
        android:text="@string/editTextName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_below="@+id/textViewEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/editTextEmail" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewUser"
        android:layout_below="@+id/textViewUser"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/editTextUser" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPassword"
        android:layout_below="@+id/textViewPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/editTextPassword" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAccept"
        android:layout_alignBottom="@+id/buttonAccept"
        android:layout_alignRight="@+id/editTextPassword"
        android:text="@string/buttonCancel" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignParentTop="true"
        android:text="@string/textViewName"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:text="@string/textViewEmail"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:text="@string/textViewUser"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewUser"
        android:layout_below="@+id/editTextUser"
        android:text="@string/textViewPassword" 
        android:textSize="15sp"/>

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUser"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="34dp"
        android:text="@string/buttonAccept" />

</RelativeLayout>