<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionActivity" >

    <Button
        android:id="@+id/buttonAddCoupons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonOptionAdd" />

    <Button
        android:id="@+id/buttonOptionSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonListCoupons" />

    <Button
        android:id="@+id/buttonOptionCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonOptionCancel" />

    <TextView
        android:id="@+id/textViewOUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewOUsername"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>