<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/buttonLCancel"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonLogin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_alignRight="@+id/editTextLPassword"
        android:text="@string/buttonLCancel" />

    <EditText
        android:id="@+id/editTextLUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLUser"
        android:ems="10"
        android:hint="User Name"
        android:text="@string/editTextLUser" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewLPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLUser"
        android:layout_below="@+id/editTextLUser"
        android:layout_marginTop="26dp"
        android:text="@string/textViewLPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextLPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLPassword"
        android:layout_below="@+id/textViewLPassword"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@string/editTextLPassword" />

    <TextView
        android:id="@+id/textViewLUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLUser"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/textViewLUser"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLPassword"
        android:layout_below="@+id/editTextLPassword"
        android:layout_marginTop="96dp"
        android:text="@string/buttonLogin" />

</RelativeLayout>