<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/images"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/buttonLogin" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonLogin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_toRightOf="@+id/buttonLogin"
        android:text="@string/buttonRegister" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonRegister"
        android:layout_alignBottom="@+id/buttonRegister"
        android:layout_toRightOf="@+id/buttonRegister"
        android:text="@string/buttonExit" />

</RelativeLayout>
